--- a/src/styles/DatingCards.scss
+++ b/src/styles/DatingCards.scss
@@ -15,6 +15,13 @@
   border-radius: 20px;
   background-size: cover;
   background-position: center;
+
+  h3 {
+    position: absolute;
+    bottom: 0;
+    margin: 10px;
+    color: white;
+  }
 }
 
 .swipe {
